clang/test/BSC/Negative/SafeZone/raw_ptr_increment_decrement/raw_ptr_increment_decrement.cbs
// RUN: %clang_cc1 -verify %s

void raw_ptr_increment_decrement(int *p) {
    _Safe {
        p++; // expected-error {{'++' operator is forbidden in the safe zone}}
        ++p; // expected-error {{'++' operator is forbidden in the safe zone}}
        p--; // expected-error {{'--' operator is forbidden in the safe zone}}
        --p; // expected-error {{'--' operator is forbidden in the safe zone}}
    }
}